# CudaFractal

./: .gitignore  CMakeLists.txt  README.md  wrap_glsl_as_literal.cmake
src/: .clang-format  ChannelArgs.h  ChannelCurves.cpp  ChannelCurves.h  ChannelPane.cpp  ChannelPane.h  ChannelTuner.cpp  ChannelTuner.h  Controller.cpp  Controller.h  ExportingManagement.cpp  ExportingManagement.h  InputPane.cpp  InputPane.h  OpenGLWidget.cpp  OpenGLWidget.h  Renderer.cpp  Renderer.h  RenderingManagement.cpp  RenderingManagement.h  ShaderSrc.h  TaskArgs.h  TaskManager.cpp  TaskManager.h  TextureScene.cpp  TextureScene.h  TextureView.cpp  TextureView.h  config.cpp  cuda_kernels.cu  cuda_kernels.h  main.cpp
src/cuda/: FixedPoint8U30.cu  FixedPoint8U30.h  FixedPoint8U30Naive.cu  FixedPoint8U30Naive.h  FixedPointNTT.h  Interface.h  KernelMandelbrot.cu  KernelMandelbrotWarpWise.cu  MandelbrotKernel.cu  TaskArgs.h
src/shaders/: ChannelCurvesFragment.glsl  ChannelCurvesVertex.glsl  TextureViewFragment.glsl  TextureViewVertex.glsl  fragment.glsl  fragment_shader.glsl  vertex.glsl
